--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "bezhansalleh/filament-shield": "^3.2",
         "filament/filament": "^3.2",
+        "filament/notifications": "^3.2",
         "flowframe/laravel-trend": "^0.2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
